Add `fail` function to jest customization file
Motivation: we can use `fail` in the future to force-fail tests.

--- a/__test__/jest/README
+++ b/__test__/jest/README
@@ -12,3 +12,9 @@ Used to stub a class function with the given return value.
 ```ts
 test.stub(MyClass.prototype, 'myFunction', {});
 ```
+
+### `fail`
+Jest does not have a way to force fail a function.
+```ts
+test.fail();
+```
