--- a/__test__/README
+++ b/__test__/README
@@ -6,16 +6,16 @@ Here is a basic test file template.
 import { TestEnvironment } from '../../support/environment/TestEnvironment';
 
 // mock an entire file
-jest.mock('../../../src/MyFile');
+vi.mock('../../../src/MyFile');
 
 describe('My tests', () => {
   beforeEach(() => {
-    jest.useFakeTimers();
+    vi.useFakeTimers();
     TestEnvironment.initialize();
   });
 
   afterEach(() => {
-    jest.resetAllMocks();
+    vi.resetAllMocks();
   });
 
   test('This is a test description', () => {});
@@ -30,7 +30,7 @@ Your test may result in an error being printed but the test still succeeds. To s
 
 ```ts
 // suppress all internal logging
-jest.mock('../../../src/shared/libraries/Log');
+vi.mock('../../../src/shared/libraries/Log');
 ```
 
 # Jest Customizations
@@ -43,22 +43,6 @@ To add more custom testing functions, add them to `jest/jest.setupt.ts` and `jes
 
 ## API
 
-### `stub`
-
-Used to stub a class function with the given mock return value.
-
-```ts
-test.stub(MyClass.prototype, 'myFunction', {});
-```
-
-### `fail`
-
-Jest does not have a way to force fail a function.
-
-```ts
-test.fail();
-```
-
 ### `nock`
 
 Mocks all HTTP requests by replacing the `fetch` function. If omitted, the status defaults to 200.
@@ -66,9 +50,3 @@ Mocks all HTTP requests by replacing the `fetch` function. If omitted, the statu
 ```ts
 test.nock({}, 404);
 ```
-
-# Troubleshooting
-
-## `jest.spyOn()` vs `test.stub()`
-
-`test.stub()`'s internal implementation is the same as `jest.spyOn()` with the difference that the `stub` function has the option to set the mock return value. **Warning**: setting the mock return value can change the behavior of nested functions. For example, if an outer function calls a function you expect to be called once -- and you set a mock return value on the outer function, your test comparison may fail.
